--- a/src/main/resources/app/thesisDetails.fxml
+++ b/src/main/resources/app/thesisDetails.fxml
@@ -150,11 +150,12 @@
                                         <Button text="✏" styleClass="document-icon-btn" onAction="#handleOpenWrittenExamReport"/>
                                     </HBox>
 
-                                    <HBox styleClass="document-card, document-gray" alignment="CENTER_LEFT" spacing="10">
+                                    <HBox styleClass="document-card, document-yellow" alignment="CENTER_LEFT" spacing="10">
                                         <VBox HBox.hgrow="ALWAYS" alignment="CENTER_LEFT">
                                             <Text text="Zapisnik sa odbrane" styleClass="document-title"/>
                                         </VBox>
-                                        <Button text="+" styleClass="document-icon-btn" style="-fx-font-size: 18px; -fx-font-weight:bold;"/>
+                                        <Button text="👁" styleClass="document-icon-btn" onAction="#handleOpenDefenseReport"/>
+                                        <Button text="✏" styleClass="document-icon-btn" onAction="#handleOpenDefenseReport"/>
                                     </HBox>
 
                                     <HBox styleClass="document-card, document-gray" alignment="CENTER_LEFT" spacing="10">
