--- a/src/main/resources/templates/defense_report_template.html
+++ b/src/main/resources/templates/defense_report_template.html
@@ -28,21 +28,21 @@
 
         #watermark-container {
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            z-index: 9999;
-            opacity: 1;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 85%;
+            z-index: -999;
             pointer-events: none;
+            display: block;
+            text-align: center;
         }
 
         #watermark-container img {
             width: 100%;
             height: auto;
+            display: block;
+            margin: 0 auto;
         }
 
         table.header-table {
@@ -259,7 +259,7 @@
 <body>
 
 <div id="watermark-container">
-    <img src="pozadina.svg" alt="Watermark"/>
+    <img src="pozadina_2.png" alt="Watermark"/>
 </div>
 
 <table class="header-table">
