--- a/src/main/resources/templates/written_exam_report_template.html
+++ b/src/main/resources/templates/written_exam_report_template.html
@@ -28,29 +28,27 @@
         }
 
         /* VODENI ŽIG */
-        #watermark-container {
+
+        /* Klasa za div (okvir) - ISPRAVLJENO */
+        /* --- VODENI ŽIG - FIX ZA CENTRIRANJE --- */
+        .centar-pozadina {
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            /* Flexbox za savršeno centriranje */
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            /* Gura ga skroz nazad */
-            z-index: 9999;
-            /* Čini ga prozirnim (prilagodi broj od 0.1 do 1.0) */
-            opacity: 1;
-            /* Osigurava da ne smeta pri selektovanju teksta */
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 85%;
+            z-index: -999;
             pointer-events: none;
+            display: block;
+            text-align: center;
         }
 
-        #watermark-container img {
+        .centar-pozadina img {
             width: 100%;
             height: auto;
+            display: block;
+            margin: 0 auto;
         }
-
         /* --- ZAGLAVLJE --- */
         table.header-table {
             width: 100%;
@@ -238,8 +236,8 @@
 </head>
 <body>
 
-<div id="watermark-container">
-    <img src="pozadina.svg" alt="Watermark"/>
+<div class="centar-pozadina">
+    <img src="pozadina_2.png" alt="Watermark"/>
 </div>
 
 <table class="header-table">
