--- a/src/main/resources/templates/written_exam_report_template.html
+++ b/src/main/resources/templates/written_exam_report_template.html
@@ -6,14 +6,14 @@
     <style>
         @font-face {
             font-family: 'Toronto BH';
-            src: url('/fonts/Toronto Bold.ttf') format('truetype');
+            /* Osigurali smo da nema razmaka u imenu fajla */
+            src: url('/fonts/TorontoBold.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
         }
 
         @page {
             size: A4;
-            /* SLUŽBENE MARGINE: 20mm lijevo/desno (standard), 15mm gore/dole */
             margin: 15mm 20mm 15mm 20mm;
         }
 
@@ -27,10 +27,7 @@
             background-color: transparent;
         }
 
-        /* VODENI ŽIG */
-
-        /* Klasa za div (okvir) - ISPRAVLJENO */
-        /* --- VODENI ŽIG - FIX ZA CENTRIRANJE --- */
+        /* --- VODENI ŽIG --- */
         .centar-pozadina {
             position: fixed;
             top: 50%;
@@ -42,195 +39,115 @@
             display: block;
             text-align: center;
         }
+        .centar-pozadina img { width: 100%; height: auto; display: block; margin: 0 auto; }
 
-        .centar-pozadina img {
-            width: 100%;
-            height: auto;
-            display: block;
-            margin: 0 auto;
-        }
         /* --- ZAGLAVLJE --- */
-        table.header-table {
-            width: 100%;
-            border-collapse: collapse;
-            border: 2px solid #000;
-            table-layout: fixed;
-            margin-bottom: 15px;
-        }
-
-        table.header-table td {
-            border: 1px solid #000;
-            vertical-align: middle;
-            padding: 0;
-        }
-
-        .cell-header-left {
-            padding-left: 5px !important;
-            height: auto;
-        }
-
+        table.header-table { width: 100%; border-collapse: collapse; border: 2px solid #000; table-layout: fixed; margin-bottom: 15px; }
+        table.header-table td { border: 1px solid #000; vertical-align: middle; padding: 0; }
+        .cell-header-left { padding-left: 5px !important; height: auto; }
         .faculty-text { font-size: 14pt; font-weight: bold; text-transform: uppercase; margin-bottom: 5px; }
         .uni-text { font-size: 14pt; font-weight: bold; }
-
-        .cell-zapisnik {
-            text-align: center;
-            font-weight: bold;
-            font-size: 16pt;
-            letter-spacing: 1px;
-            padding: 2px !important;
-        }
-
-        .cell-commission {
-            font-weight: bold;
-            font-size: 14pt;
-            padding-left: 20px !important;
-            text-align: center;
-            height: 50px;
-        }
-
-        .cell-grid-container {
-            vertical-align: top;
-            height: 30px;
-        }
+        .cell-zapisnik { text-align: center; font-weight: bold; font-size: 16pt; letter-spacing: 1px; padding: 2px !important; }
+        .cell-commission { font-weight: bold; font-size: 14pt; padding-left: 20px !important; text-align: center; height: 50px; }
+        .cell-grid-container { vertical-align: top; height: 30px; }
 
         /* KOCKICE */
-        .boxes-table {
-            width: 100%;
-            height: 100%;
-            border-collapse: collapse;
-            border: none;
-            table-layout: fixed;
-        }
-
-        .boxes-table td {
-            border-right: 1px solid #000;
-            border-bottom: 1px solid #000;
-            border-top: none;
-            border-left: none;
-            text-align: center;
-            vertical-align: middle;
-            font-size: 11pt;
-        }
-
+        .boxes-table { width: 100%; height: 100%; border-collapse: collapse; border: none; table-layout: fixed; }
+        .boxes-table td { border-right: 1px solid #000; border-bottom: 1px solid #000; border-top: none; border-left: none; text-align: center; vertical-align: middle; font-size: 11pt; }
         .boxes-row td { height: 25px; }
         .boxes-table td:last-child { border-right: none; }
-
-        .date-row td {
-            border: none;
-            text-align: left;
-            padding-left: 5px !important;
-            font-size: 12pt;
-            height: 25px;
-            vertical-align: middle;
-        }
+        .date-row td { border: none; text-align: left; padding-left: 5px !important; font-size: 12pt; height: 25px; vertical-align: middle; }
 
         /* --- SADRŽAJ --- */
-        .main-title {
-            text-align: center;
-            /* Razmak od gornje tabele */
-            margin-top: 30px;
-            /* Razmak od donjeg teksta */
-            margin-bottom: 30px;
-        }
-
-        .main-title h1 {
-            font-size: 20pt;
-            font-weight: bold;
-            letter-spacing: 3px;
-            /* UKLANJAM default marginu da se približi podnaslovu */
-            margin-bottom: 0;
-            margin-top: 0;
-            line-height: 1.2;
-        }
-
-        .main-title p {
-            font-size: 18pt;
-            font-weight: bold;
-            /* Mali razmak samo da se odvoji od ZAPISNIK */
-            margin-top: 5px;
-            margin-bottom: 0;
-        }
+        .main-title { text-align: center; margin-top: 30px; margin-bottom: 30px; }
+        .main-title h1 { font-size: 20pt; font-weight: bold; letter-spacing: 3px; margin: 0; line-height: 1.2; }
+        .main-title p { font-size: 18pt; font-weight: bold; margin-top: 5px; margin-bottom: 0; }
 
         .content { text-align: justify; }
-        /* Razmaci između paragrafa */
         .content p { margin-top: 10px; margin-bottom: 10px; }
-
         .first-sentence { text-align: center; margin-bottom: 10px; margin-top: 0; }
 
         .student-block { text-align: center; margin: 15px 0; font-weight: bold; justify-content: center }
-        .student-name {
-            text-transform: uppercase;
-            display: block;
-            width: 80%;
-            margin: auto;
-            text-align: center;
-            border-bottom: 1px solid #000;
-            font-size: 13pt;
-        }
+        .student-name { text-transform: uppercase; display: block; width: 80%; margin: auto; text-align: center; border-bottom: 1px solid #000; font-size: 13pt; }
 
         .thesis-wrapper {
-            width: 100%;
-            text-align: center;
-            margin-top: 5px;
+            width: 80%;
+            margin: 5px auto;
             display: block;
+            text-align: center;
+            line-height: 30px;
+            min-height: 60px;
+            background-image: linear-gradient(to bottom, #ffffff 29px, #000000 29px, #000000 30px);
+            background-size: 100% 30px;
+            background-repeat: repeat-y;
+            background-position: top left;
         }
 
         .thesis-title {
-            font-family:'Times New Roman', 'Toronto BH';
-            font-size: 12pt;
+            font-family: 'Toronto BH', 'Times New Roman';
+            font-size: 12pt; /* Defaultna veličina */
             font-weight: bold;
-            display: inline;
-            border-bottom: 1px solid #000;
-            line-height: 1.5;
-            padding-bottom: 1px;
+            background-color: transparent;
+            border: none;
+            padding: 0;
+            margin: 0;
         }
 
-        /* --- KOMISIJA --- */
-        .commission-section { margin-top: 10px; margin-bottom: 10px; width: 100%; }
+        /* --- KLASA ZA SMANJENI FONT (-2pt) --- */
+        /* Ovu klasu ćeš dodati kroz Javu ako je tekst predug */
+        .thesis-title.small-font {
+            font-size: 10pt !important;
+            /* Eventualno malo podešavanje letter-spacinga da stane više teksta */
+            letter-spacing: -0.5px;
+        }
+        /* Tabela koja drži linije */
+        .thesis-lines-table {
+            width: 100%;
+            margin: 10px auto;
+            border-collapse: collapse; /* Bitno da se linije ne razdvajaju čudno */
+            border: none;
+        }
 
+        /* Izgled svake ćelije (linije) */
+        .thesis-line-cell {
+            /* Fiksna visina reda da izgleda kao sveska */
+            height: 30px;
+
+            /* Crna linija na dnu */
+            border-bottom: 1px solid #000;
+
+            /* Tekst */
+            text-align: center;
+            vertical-align: bottom; /* Tekst "leži" na liniji */
+            padding-bottom: 2px;    /* Malo odvajanje od linije */
+
+            /* Fontovi */
+            font-family: 'Toronto BH', 'Times New Roman';
+            font-size: 12pt; /* Prilagodi veličinu po želji */
+
+            /* Sprečavanje prelamanja unutar jedne ćelije - mi smo to riješili u Javi */
+            white-space: nowrap;
+            overflow: hidden;
+        }
+        /* --- KOMISIJA I POTPISI --- */
+        .commission-section { margin-top: 10px; margin-bottom: 10px; width: 100%; }
         .mentor-table { width: 100%; border-collapse: collapse; border: none; }
         .mentor-table td { border: none; padding: 2px 0; vertical-align: bottom; }
         .mentor-label { white-space: nowrap; width: 1px; padding-right: 10px;}
-
         .outer-commission-table { width: 100%; border-collapse: collapse; border: none; margin-top: 5px; }
         .sastav-label-cell { width: 140px; vertical-align: top; padding-top: 5px; }
-
         .commission-inner-table { width: 100%; border-collapse: collapse; border: none; }
-        .commission-inner-table td {
-            border: none;
-            padding-bottom: 3px;
-            padding-top: 5px;
-            vertical-align: top; /* Predsjednik poravnat na vrh */
-            font-size: 12pt;
-        }
-
+        .commission-inner-table td { border: none; padding-bottom: 3px; padding-top: 5px; vertical-align: top; font-size: 12pt; }
         .role-col { width: 110px; font-weight: bold; white-space: nowrap; padding-bottom: 2px; }
         .line-wrapper { display: block; width: 100%; min-height: 22px; border-bottom: 1px solid #000; padding-left: 10px; padding-bottom: 2px; }
-
-        /* --- POTPISI (PREPRAVLJENO) --- */
         .signatures-area { margin-top: 25px; width: 100%; }
         .sig-table { width: 100%; border-collapse: collapse; border: none; }
         .sig-table td { border: none; vertical-align: bottom; }
-
-        /* Klasa za tekst iznad linije */
-        .sig-label-text {
-            text-align: center;
-            font-size: 12pt;
-            margin-bottom: 35px; /* Prazan prostor za potpis */
-        }
-
-        /* Klasa za samu liniju ispod */
-        .sig-line-bottom {
-            border-bottom: 1px solid #000;
-            width: 80%;
-            margin: 0 auto;
-            height: 1px;
-        }
-
+        .sig-label-text { text-align: center; font-size: 12pt; margin-bottom: 35px; }
+        .sig-line-bottom { border-bottom: 1px solid #000; width: 80%; margin: 0 auto; height: 1px; }
         .bottom-section { margin-top: 20px; }
         .delivered-box { border: 1px solid #000; padding: 5px; width: 180px; font-size: 10pt; }
         .delivered-box p { margin: 2px 0; }
-
         .member-sig-line { border-bottom: 1px solid #000; width: 250px; margin-bottom: 15px; height: 15px; }
     </style>
 </head>
@@ -288,52 +205,43 @@
     <div class="student-block">
         <span class="student-name">{{studentFullName}}</span>
 
-        <div class="thesis-wrapper">
-            <span class="thesis-title">"{{thesisTitle}}"</span>
-        </div>
+        <table class="thesis-lines-table">
+            <tr>
+                <td class="thesis-line-cell">{{line1}}</td>
+            </tr>
+            <tr>
+                <td class="thesis-line-cell">{{line2}}</td>
+            </tr>
+        </table>
     </div>
 
     <div class="commission-section">
         <table class="mentor-table">
             <tr>
                 <td class="mentor-label">Mentor diplomskog rada: </td>
-                <td>
-                    <div class="line-wrapper">{{mentorFullName}}</div>
-                </td>
+                <td><div class="line-wrapper">{{mentorFullName}}</div></td>
             </tr>
         </table>
-
         <table class="outer-commission-table">
             <tr>
-                <td class="sastav-label-cell">
-                    Sastav Komisije:
-                </td>
-
+                <td class="sastav-label-cell">Sastav Komisije:</td>
                 <td>
                     <table class="commission-inner-table">
                         <tr>
                             <td class="role-col">Predsjednik:</td>
-                            <td>
-                                <div class="line-wrapper">{{chairmanFullName}}</div>
-                            </td>
+                            <td><div class="line-wrapper">{{chairmanFullName}}</div></td>
                         </tr>
                         <tr>
                             <td class="role-col">Član:</td>
-                            <td>
-                                <div class="line-wrapper">{{member1FullName}}</div>
-                            </td>
+                            <td><div class="line-wrapper">{{member1FullName}}</div></td>
                         </tr>
                         <tr>
                             <td class="role-col">Član:</td>
-                            <td>
-                                <div class="line-wrapper">{{mentorFullName}}</div>
-                            </td>
+                            <td><div class="line-wrapper">{{mentorFullName}}</div></td>
                         </tr>
                         <tr>
                             <td class="role-col" style="font-weight: normal">Sekretar:</td>
-                            <td>
-                                <div class="line-wrapper">{{secretaryFullName}}</div>
-                            </td>
+                            <td><div class="line-wrapper">{{secretaryFullName}}</div></td>
                         </tr>
                     </table>
                 </td>
@@ -356,12 +264,9 @@
                 <td style="white-space: nowrap; padding-right: 5px; padding-bottom: 1px; vertical-align: bottom;">
                     Nakon pregleda rada mentor je predložio ocjenu
                 </td>
-
-                <td style="width: 100%; border-bottom: 1px solid #000;">
-                </td>
+                <td style="width: 100%; border-bottom: 1px solid #000;"></td>
             </tr>
         </table>
-
         <div style="text-align: justify; line-height: 1.5;">
             za pismeni dio diplomskog rada. Komisija je donijela odluku da je kandidat zadovoljio-la na pismenom dijelu ispita i da mu se može dozvoliti polaganje usmenog dijela ispita.
         </div>
@@ -381,24 +286,12 @@
             </td>
         </tr>
     </table>
-
     <table class="sig-table bottom-section" style="width: 100%; border-collapse: collapse;">
         <tr>
             <td width="40%" style="vertical-align: top;">
-
-                <table style="
-                border: 1px solid #000;
-                border-collapse: collapse;
-                width: 90%;
-                margin-bottom: 10px;
-            ">
+                <table style="border: 1px solid #000; border-collapse: collapse; width: 90%; margin-bottom: 10px;">
                     <tr>
-                        <td style="
-                        background-color: #f0f0f0;
-                        border-bottom: 1px solid #000;
-                        padding: 5px;
-                        font-weight: bold;
-                    ">
+                        <td style="background-color: #f0f0f0; border-bottom: 1px solid #000; padding: 5px; font-weight: bold;">
                             Dostavljeno:
                         </td>
                     </tr>
@@ -425,10 +318,8 @@
                         </td>
                     </tr>
                 </table>
-
                 <div style="font-size: 7pt;">Obrazac PTF-SS-021</div>
             </td>
-
             <td width="60%" align="right" style="vertical-align: top; padding-top: 5px;">
                 <div style="text-align: center; display: inline-block; width: 250px;">
                     <div style="margin-bottom: 30px; font-size: 11pt;">Članovi Komisije:</div>
